\name{antiProfilesnews}
\title{antiProfiles news}

\encoding{UTF-8}

\section{Version 1.9.1}{
  \itemize{
    \item Add NEWS file
    \item Add code to compute expression variability measure from Alemu, et al. NAR 2014.
  }		 
}